<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_rectangle"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="16.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_ellipse3" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="-100dp"
        android:layout_marginBottom="-150dp"
        android:foregroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_ellipse" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="-200dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_ellipse2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="82dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/arrow_left" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/account_name"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imgAvatar"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="200dp"
                    android:src="@drawable/mask_group" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtAboutUs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif"
                    android:text="About Us"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtInformation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="45dp"
                    android:fontFamily="sans-serif"
                    android:text="Nghiên cứu khoa học đằng sau cách Quiz hoạt động"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtInformation1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="38dp"
                    android:fontFamily="sans-serif"
                    android:text="Học trên Quiz không chỉ thú vị mà còn hiệu quả. Các nguyên tắc khoa học về học tập đầy thuyết phục là kim chỉ nam để chúng tôi tạo ra các công cụ cho bạn."
                    android:textColor="#FFFFFF"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txtInformation2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="45dp"
                    android:fontFamily="sans-serif"
                    android:text="Các loại câu hỏi"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtInformation3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="38dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/infor"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txtInformation4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="45dp"
                    android:fontFamily="sans-serif"
                    android:text="Thực hành truy hồi"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtInformation5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="38dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/infor1"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>